--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.22",
+    "facebook-nodejs-business-sdk": "^24.0.1",
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.555.0",
     "postcss": "^8.5.6",
